--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body, html {
-    height: 100%;
+    /* height: 100%; */
     margin: 0;
     display: flex;
     justify-content: center;
@@ -7,11 +7,6 @@ body, html {
     background: #f0f0f3;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     transition: background 0.3s ease, color 0.3s ease; /* Smooth transition for background and color changes */
-}
-
-/* Zoom out the content */
-body {
-    transform: scale(0.8); /* Adjust the scale value as needed */
 }
 
 #watch-container { 
@@ -99,4 +94,5 @@ ul {
 #welcomeMessage {
     font-size: 1.2em;
     font-weight: 600;
+    
 }
